--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
+#Folder with the data for project 1(CV analysis)
+C:\Обучение\SF\IDE\Bloc1\PROJECT-1. Анализ резюме из HeadHunter\data/
 # Distribution / packaging
 .Python
 build/
