--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ __pycache__/
 *.so
 
 #Folder with the data for project 1(CV analysis)
-C:\Обучение\SF\IDE\Bloc1\PROJECT-1. Анализ резюме из HeadHunter\data/*
+PROJECT-1. Анализ резюме из HeadHunter/data/*
+
 # Distribution / packaging
 .Python
 build/
