--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@ __pycache__/
 # C extensions
 *.so
 
-#Folder with the data for project 1(CV analysis)
-PROJECT-1. Анализ резюме из HeadHunter/data/*
-
 # Distribution / packaging
 .Python
 build/
@@ -163,3 +160,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# data folders
+# data folders
+data/*
