--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,12 @@ cython_debug/
 /Bloc1/PROJECT-1. Анализ резюме из HeadHunter/data/ExchangeRates.csv
 /Bloc1/PROJECT-1. Анализ резюме из HeadHunter/data/*.csv
 /Bloc2/PYTHON-16. Как выгружать данные из файлов разных форматов/data
+/Bloc2/SQL-0. Привет, SQL!/dst3-u2-md4_8_2.png
+/Bloc2/SQL-0. Привет, SQL!/gif2.gif
+/Bloc2/SQL-0. Привет, SQL!/gig1.gif
+/Bloc2/SQL-0. Привет, SQL!/Конспект.odt
+/Bloc2/SQL-0. Привет, SQL!/dst3-u2-md4_4_1.png
+/Bloc2/SQL-0. Привет, SQL!/dst3-u2-md4_7_1.png
+/Bloc2/SQL-0. Привет, SQL!/dst3-u2-md4_7_2.png
+/Bloc2/SQL-0. Привет, SQL!/dst3-u2-md4_8_1.png
+/Bloc2/Exam
